src/test/ui/parser/attr-dangling-in-mod.rs
// error-pattern:expected item

fn main() {
}

#[foo = "bar"]
